# StartML

./: .gitignore  README.rst  discover_venv.py  main.ipynb  pyproject.toml  requirements.txt  test_library.ipynb
DP/less_1/: dl.py
DP/less_1/HW/: function01.py  function02.py  function03.py  function04.py
DP/less_1/practice/: practice_1.ipynb
machine_learning/: requirements.txt
machine_learning/catboost_info/: catboost_training.json  time_left.tsv
machine_learning/catboost_info/learn/: events.out.tfevents
machine_learning/less_1/: requirements.txt
machine_learning/less_15/: requirements.txt
machine_learning/less_3/: requirements.txt
machine_learning/less_4/: requirements.txt
machine_learning/less_6/: requirements.txt
machine_learning/less_8/: requirements.txt
Разработка на Python/: lesson_1.ipynb
Разработка на Python/debugger/: debugger_samples.py
Разработка на Python/less_1/: lesson_1.ipynb
Разработка на Python/less_10/: requirements.txt
Разработка на Python/less_11/: requirements.txt
Разработка на Python/less_12/: app.py  requirements.txt
Разработка на Python/less_2/: lesson_2.ipynb
Разработка на Python/less_3/: lesson_3.ipynb  logging_example.py
Разработка на Python/less_4/: 4_task2.ipynb  4_task4.ipynb  4_task8.ipynb  idling.ipynb  less_4.ipynb
Разработка на Python/less_5/: less_5_scratch.ipynb  mini_proj_less5.ipynb  task_5.ipynb
Разработка на Python/less_6/: less_6_scratch.ipynb  requirements.txt
Разработка на Python/less_7/: less7_scratch.ipynb
Разработка на Python/less_9/: app.py  requirements.txt  test_requests.py
(+111 files in other folders)
